# poetry-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
poetry_hooks/: __init__.py
poetry_hooks/commands/: add.py  run.py
poetry_hooks/runners/: poetry.py  shell.py
